# Halide

./: .clang-tidy  CMakeLists.txt  CMakePresets.json  README_cmake.md  run-clang-tidy.sh  vcpkg.json
.github/workflows/: pip.yml
cmake/: FindNodeJS.cmake  HalideFeatures.cmake
cmake/vcpkg/wabt/: portfile.cmake  vcpkg.json
dependencies/wasm/: CMakeLists.txt
packaging/: CMakeLists.txt
src/: Associativity.cpp  CMakeLists.txt  CodeGen_C.cpp  Extern.h  Func.cpp  Generator.cpp  Generator.h  Util.h
test/correctness/: rfactor.cpp
tools/: halide_benchmark.h
tutorial/: lesson_01_basics.cpp  lesson_03_debugging_1.cpp  lesson_04_debugging_2.cpp  lesson_05_scheduling_1.cpp  lesson_06_realizing_over_shifted_domains.cpp  lesson_07_multi_stage_pipelines.cpp  lesson_08_scheduling_2.cpp  lesson_09_update_definitions.cpp  lesson_10_aot_compilation_generate.cpp  lesson_10_aot_compilation_run.cpp  lesson_11_cross_compilation.cpp  lesson_12_using_the_gpu.cpp  lesson_13_tuples.cpp  lesson_14_types.cpp  lesson_16_rgb_run.cpp  lesson_17_predicated_rdom.cpp  lesson_18_parallel_associative_reductions.cpp  lesson_19_wrapper_funcs.cpp  lesson_20_cloning_funcs.cpp  lesson_21_auto_scheduler_run.cpp  lesson_22_jit_performance.cpp  lesson_23_serialization.cpp  lesson_24_async.cpp
